// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LI /> > should render 1`] = `
<li
  data-astro-cid-mxyohmtp=""
  style=";--bodyFontFamily: "IBM Plex Sans", Trebuchet MS;--bodyFontSize: 1.25rem;--bodyFontWeight: 400;--bodyLineHeight: 1.5;--sizes125: 1.25rem;"
>
   List item 
</li>
`;

exports[`<LI /> > should render heavy 1`] = `
<li
  data-astro-cid-mxyohmtp=""
  style="font-weight:900;--bodyFontFamily: "IBM Plex Sans", Trebuchet MS;--bodyFontSize: 1.25rem;--bodyFontWeight: 400;--bodyLineHeight: 1.5;--sizes125: 1.25rem;"
>
   List item 
</li>
`;
